crates/reinhardt-forms/crates/macros/tests/ui/fail/invalid_client_validator_js.stderr
error: expected string literal
  --> tests/ui/fail/invalid_client_validator_js.rs:15:5
   |
15 |                 123 => "Expected a string expression",
   |                 ^^^
